# Webwright

./: pyproject.toml
outputs/default/android_20260614_220946/: raw_responses.jsonl  runtime_errors.jsonl  script.py  task.json  trajectory.json
scripts/: clear_clock_env.py  m3a_benchmark.py  p2_verify_forwarder_m3a_env.py
src/webwright/agents/: __init__.py  default.py  m3a_android.py
src/webwright/android/: __init__.py  agent_utils.py  app_registry.py  env_protocol.py  llm_protocol.py  m3a_utils.py  ui_element.py
src/webwright/android_agent/: README.md  __init__.py  base_agent.py  m3a.py  transition_guard.py
src/webwright/config/: __init__.py  android_workspace.yaml  local_android.yaml  local_android_m3a.yaml
src/webwright/devices/: __init__.py  a11y_forwarder_client.py  android_adb.py  android_uiautomator2.py  base.py  m3a_actuation.py  snapshots.py
src/webwright/environments/: __init__.py  local_android_m3a.py  local_browser.py  local_mobile.py
src/webwright/models/: base.py  openai_model.py
src/webwright/run/: cli.py  doctor.py
src/webwright/utils/: adb.py  device_reset.py  (+4 more)
tests/unit/: test_a11y_forwarder_client.py  test_android_uiautomator2_driver.py  test_cli.py  test_config_resolution.py  test_default_agent.py  test_json_output.py  test_local_mobile_environment.py  test_m3a_action_feedback.py  test_m3a_action_images.py  test_m3a_history.py  test_mobile_snapshot.py  test_model_errors.py  test_openai_model.py  test_semantic_summary.py  test_transition_guard.py  test_ui_signature.py  test_vision_images.py  test_xpath_position_normalize.py
(+96 files in other folders)
