[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webwright"
version = "0.1.0"
description = "Webwright: tiny SWE-style web agent harness"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
    "playwright>=1.45",
    "python-dotenv>=1.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
android = [
    "uiautomator2>=3.0",
]
m3a = [
    "numpy>=1.26",
    "opencv-python-headless>=4.8",
    "immutabledict>=2.0",
    "fuzzywuzzy>=0.18",
    "python-Levenshtein>=0.21",
    "absl-py>=2.1",
]

[project.scripts]
webwright = "webwright.run.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
webwright = ["config/*.yaml", "config/**/*.yaml"]
